Update globals.css to fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,11 @@
   overflow-x: hidden;
 }
 */
+
+:root {
+  overflow-x: hidden;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .example::-webkit-scrollbar {
   display: none;
